changing the z-index for slide_bar, fixing the close btn issue

--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -115,7 +115,6 @@
   @include flex_center;
   flex-direction: column;
   gap: 2rem;
-  z-index: 200;
   // border: 2px solid yellow;
   li {
     text-wrap: nowrap;
